syntax = "proto3";

package luvx.user;

option java_multiple_files = true;
option java_package = "org.luvx.boot.rpc.dubbo.service.proto.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc oneToOne (UserRequest) returns (UserResponse) {}
  rpc oneToMany (UserRequest) returns (stream UserResponse) {}
  //  rpc manyToOne (stream UserRequest) returns (UserResponseList) {}
  //  rpc manyToMany (stream UserRequest) returns (stream UserResponse) {}
}

message UserRequest {
  uint64 id = 1;
  string name = 2;
  string password = 3;
  int32 age = 4;
}

message UserResponse {
  string message = 1;
}

//message UserResponseList {
//  repeated UserResponse users = 1;
//}